Restore index.html to original state
Restored the original content of index.html after removal.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!-- SHOFI SALSABILA - 24611052 -->
 <!doctype html>
 <html lang="id">
-  /*--- SHOFI SALSABILA - 24611052 ---*/
+ 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -415,3 +416,4 @@
     </script>
   </body>
 </html>
+
